Support throwOnUnknown